# model-encryption

./: README.md  pyproject.toml
.github/workflows/: cli.yml  linters.yml
scripts/tests/: test-sign-encrypt-decrypt-verify
src/model_encryption/: __init__.py  __main__.py  _cli.py  encrypting.py
src/model_encryption/_encrypting/: aes.py
test/: model.sig
